Added new button in navbar for blog page

--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,15 @@
 					Portfolio
 				</div>
 			</a>
+			<a class="button" href="blog.php">
+				<div class="icon-container">
+					<div class="icon">
+					</div>
+				</div>
+				<div>
+					Blog
+				</div>
+			</a>
 		</div>
 	</nav>
 	<footer>
