--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 					Portfolio
 				</div>
 			</a>
+			<a class="button" href="blog.php">
+				<div class="icon-container">
+					<div class="icon">
+					</div>
+				</div>
+				<div>
+					Blog
+				</div>
+			</a>
 		</div>
 	</nav>
 	<footer>
