Adapting "next/previous" nav buttons for blog page

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
 		<img src="images/crowd-1056764_1920.jpg" alt="crowd in a nightclub">
 	</div>
 	<header>
-		<a class="nav-button previous" href="portfolio.html" alt="portfolio icon">
-			<img src="images/portfolio-icon.png">
+		<a class="nav-button previous" href="blog.php">
+			<img src="images/blog-icon.png" alt="blog icon">
 		</a>
 		<img class="centre" src="images/ralphportrait.jpg" alt="portrait of ralph">
 		<h1 class="small-heading">Ralph Rutter</h1>
