--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
 			<h1 class="inner">Project 3</h1>
 			<h1>Project 4</h1>
 		</div>
-		<a class="nav-button next" href="about.html">
-			<img src="images/about-icon.png" alt="about icon">
+		<a class="nav-button next" href="blog.php">
+			<img src="images/blog-icon.png" alt="blog icon">
 		</a>
 	</header>
 	<main>
