fixed some links

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 		<img src="images/crowd-1056764_1920.jpg" alt="crowd in a nightclub">
 	</div>
 	<header>
-		<a class="nav-button previous" href="blog.php">
+		<a class="nav-button previous" href="blog.php?page=most-recent">
 			<img src="images/blog-icon.png" alt="blog icon">
 		</a>
 		<img class="centre" src="images/ralphportrait.jpg" alt="portrait of ralph">
@@ -92,7 +92,7 @@
 					Portfolio
 				</div>
 			</a>
-			<a class="button" href="blog.php">
+			<a class="button" href="blog.php?page=most-recent">
 				<div class="icon-container">
 					<div class="icon">
 					</div>
