--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
 					Portfolio
 				</div>
 			</a>
-			<a class="button" href="blog.php">
+			<a class="button" href="blog.php?page=most-recent">
 				<div class="icon-container">
 					<div class="icon">
 					</div>
