--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 			<h1 class="inner">Project 3</h1>
 			<h1>Project 4</h1>
 		</div>
-		<a class="nav-button next" href="blog.php">
+		<a class="nav-button next" href="blog.php?page=most-recent">
 			<img src="images/blog-icon.png" alt="blog icon">
 		</a>
 	</header>
@@ -76,7 +76,7 @@
 					Portfolio
 				</div>
 			</a>
-			<a class="button" href="blog.php">
+			<a class="button" href="blog.php?page=most-recent">
 				<div class="icon-container">
 					<div class="icon">
 					</div>
