Removed extra quote mark in fractal img

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 	<main>
 		<div class="container margin">
 			<div class="annex pre">
-				<img src="images/structure-1473346_1920.jpg alt="fractal"">
+				<img src="images/structure-1473346_1920.jpg alt="fractal">
 			</div>
 			<div class="content">
 				<div class="content scroll">
